# ncurses

./: CMakeLists.txt
gen_headers/: ncurses_cfg.h  term.h
include/: curses.head  ncurses_cfg.h
ncurses/: CMakeLists.txt  curses.priv.h
ncurses/tty/: MKexpanded.py  MKexpanded.sh
